timeline ph3 dev
Former-commit-id: 0d466d9609decf12bd8116b8e950c70560b61cdf

--- a/_includes/timeline/ph3-dev.html
+++ b/_includes/timeline/ph3-dev.html
@@ -1,10 +1,32 @@
 <article class="column">
-  <details>
-    <summary><h5>Cernan's Promise</h5></summary>
-            All the factories set up at CP direct most of their output to making spacecraft, space stations, tether installations, space robots, and equipment for other worlds. By the end of this phase less then 20% of the mass of any of these things comes from Earth, and various items are made completely on the Moon.
-  </details>
+
   <details>
     <summary><h5>Robotics and AI</h5></summary>
+    <p>This is the point where the sophistication of artificial intelligence allows robots to perform many tasks without any human oversight. They can be taught to do almost any task done by people in industrial jobs today, as long as it is fairly repetitive and predictable. Once they have learned, they alert a human only when some unforeseen event prevents them from continuing. They are capable of working in teams, coordinating what they do with other robots.</p>
+    <p>This capability is what allows the interplanetary missions to be done on such large scales. In almost all cases, the missions are executed by aritificial intelligences and robots. They don't report back to people on Earth or the Moon every time they have done some simple movement. They complete entire projects almost on their own. They have blueprints in their memory for a long series of points in the construction of the space elevators on Phobos and Ceres, for instance. They figure out how to reach each point in that series, so the construction matches the blueprint, using the library of routines they have. The space elevators and other such things have been designed for easy deployment on site, same as equipment to be installed on the ISS is today, but this still requires very complex behavior and problem solving.</p>
+    <p>This capacity speeds up development in space dramatically. This is why so many things get done during this phase, and later phases are exponentially more active again. Factories are built that manufacture entire vehicles and robots almost by themselves, staffed with robotic machinery. The raw materials that are used in those factories arrive from other factories that are almost as automated. As long as the robots operate in a predictable environment, they can do almost anything. By the end of this phase many items and pieces of equipment are made completely of lunar materials by lunar machines. Only very sophisticated and delicate machines come from Earth, such as computers and viewscreens.</p>
+  </details>
+  <details>
+    <summary><h5>Cernan's Promise</h5></summary>
+    <p>The colony built on the eastern rim of Lalande Crater will house 800 people by the end of this phase. Plans for a town for 50,000 people, surrounded by the factories that form the core of lunar industry, have been carefully drawn up and are methodically executed even as industry ramps up. The residents participate in construction of the factories and the town, but mostly that is handled by robots on their own. People focus on research, design, and planning of industries for Cernan's Promise. As soon as possible, the first factories at CP begin building modules and equipment for spacecraft, space stations, robots, satellites, and tether facilities.</p>
+    <details>
+      <summary>Construction of Initial Habs, Factories, and Hangars</summary>
+     <ul>
+       <li>A remotely operated set of equipment excavates a pit and builds the first habitat inside it. That habitat is an atrium design with a radiation blind roof. A team of 20 people moves into that hab and oversees continuing construction.</li>
+       <li>The surface near the habitat is paved, including the landing pad for the LNCs, connected by a road to the hab area.</li>
+       <li> A microwave rectenna is built to provide power to the new colony. It receives microwaves beamed from the skyhooks. </li>
+       <li> An airless hangar is built that houses a repair and maintenance station, a set of dust roasters producing pure metals, and a series of machines that turn that into components: 3d printers, casting equipment, welders.</li>
+       <li>On the open surface, a series of MIP stations, solar furnaces, and chemical reactors are built. Some of the reactors are multi-stage processes in their own sheds. More of all of these are built throughout this phase, to support the factories and hangars with a range of supplies, and support continuing construction.</li>
+       <li>A factory with a thin atmosphere is built and filled with glass fiber equipment. Unlike hangars, factories have internal divisions, including multiple floors, columns, and internal walls. This factory produces short fibers and thread made of different kinds of glass, and from that, fabric, cable, nets, batting, and bulk fibers for composite materials. Some of that is made of simple basalt, some is aluminosilicate glass, or has other glass formulas. Composite materials in simple shapes are made with molds, presses, or rollers: pipes, rods, panels, containers, rings.</li>
+       <li>The excavation for the galleries and the atriums is all done. Some sections were blasted out during earlier exploration missions.</li>
+       <li>The upper gallery and the north atrium hab are built.</li>
+       <li>An multi-storey airless factory is built. On the ground floor is bulk production of transparent glass, in panes of varying thickness, profile, and shape. It also produces Fresnel, convex, and concave lenses.</li>
+       <li>The 2nd floor takes glass panes from the ground floor and prints photovoltaics and circuitry onto them. Its output of solar cells is assembled into panels and shipped to Inukshuk and the skyhooks.</li>
+       <li>The 3rd floor is set up for production of Zylon. It contains a number of reactors that turn the carbon chemicals from asteroids and lunar deposits into precursor chemicals for Zylon. Once the complex polymer that constitutes Zylon is made, it is carefully spun into high-quality fibers and threads. These are then made into cables, that are woven into components for the skyhooks.</li>
+      <li>That floor also houses specialized reactor chambers for making silicone polymers.</li>
+       <li>A silo is set up for bulk production of topsoil.</li>
+       <li></li>
+       </ul>
   </details>
   <details>
     <summary><h5>Manufacturing</h5></summary>
