ph3 dev gagarin station
Former-commit-id: 245bafa24954d589d21d91c0b4b05e6fbf7fef67

--- a/_includes/timeline/ph3-trans.html
+++ b/_includes/timeline/ph3-trans.html
@@ -29,7 +29,8 @@
     </details>
     <details>
       <summary><h5>Gagarin Shipyard</h5></summary>
-      <p>The shipyard goes into full swing once Cernan's Promise is producing materials for it. Components and modules for spacecraft and space stations are sent up the tether, and at the shipyard are assembled. Once fully operational, all interplanetary missions launch from Gagarin's skyhook, after their craft have been assembled there. Most satellites of Earth launch from Gagarin as well. Of the ones that don't, most launch from the EESS after final assembly there, which usually includes the addition of parts from the Moon (such as solar panels or Neumann Drives). Some manufacturing processes that require micro-gravity occur at Gagarin as well.</p>
+      <p>The shipyard goes into full swing once Cernan's Promise is producing materials for it. Components and modules for spacecraft and space stations are sent up the tether, and at the shipyard are assembled. Many of the arriving structures are incorporated into Gagarin itself, filling out and extending the superstructure according to the long-term plan it was designed for. More about that in the O'Neill Cylinders section.</p>
+      <p>Once fully operational, all interplanetary missions launch from Gagarin's skyhook, after their craft have been assembled there. Most satellites of Earth launch from Gagarin as well. Of the ones that don't, most launch from the EESS after final assembly there, which usually includes the addition of parts from the Moon (such as solar panels or Neumann Drives). Some manufacturing processes that require micro-gravity occur at Gagarin as well.</p>
       <p>Crews for deep space missions usually do final training at Gagarin. It's also common for at least part of the crew to be drawn from the crews of Gagarin and Crossroads.</p>
 
     </details>
