--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -57,7 +57,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>The Anshar skyhook orbiting Earth is finished, and because this makes transport so much cheaper, about 1000 of these astronauts are younger married couples around age 30 who have no children but plan to have some. As it is not yet clear how pregnancy and childhood on the Moon will play out, these couples are advised that should they become pregnant, they must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds.
+      <summary>Conditions</summary>The Anshar skyhook orbiting Earth is finished, and because this makes transport so much cheaper, about 1000 of these astronauts are younger married couples around age 30 who have no children but plan to have some. As it is not known how pregnancy and childhood on the Moon will play out, but danger is probable, these couples are advised that should they become pregnant, they must return to Earth for the pregnancy and the first years of the child's life. They may then return to the Moon. The child will be carefully monitored and the family will return to Earth if a threat to the child's health is detected. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds.
     </details></td>
   </tr>
   <tr>
@@ -66,7 +66,7 @@
   <tr>
   <td colspan="4">
     <details>
-      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall assume the first 2 months of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there if a careful program is followed.
+      <summary>Conditions</summary>The requirement of sterility is eliminated, and the average age of the astronauts drops to near 30. Risks regarding pregnancy and growing children living in space are significant, but have solutions. For the sake of argument, we shall posit the first 6 weeks of pregnancy is not affected by conditions in the lunar colonies, and that children over three can be healthy there, if a careful program is followed that involves extensive centrifuge use, a carefully designed exercise program, and possibly supplements and medication. This is simply an educated guess as to what might be sufficient.
   </details></td>
   </tr>
  </table>
