ph3 lunar life and moon agency
Former-commit-id: 1d9dd537451f984b27878a1ca0a123318c07aea6

--- a/_includes/timeline/ph2-RP-begins.html
+++ b/_includes/timeline/ph2-RP-begins.html
@@ -20,12 +20,12 @@
  </details>
  <details>
    <summary><h5>Affordable Entry</h5></summary>
-   <p>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others.</p>
-   <p>Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for 1% of one year's national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</p>
+   <p>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others. Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for 1% of one year's national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</p>
 </details>
 <details>
   <summary><h5>First Round</h5></summary>
     <p>The First Round of RP astronauts take up residence in Long Hab once it is finished. They are a very broad cross-section of the human populace. All speak English as a first or second language, almost all speak at least 2 languages. Before going to the Moon, they trained together extensively. This is standard procedure so they learn how systems operate on the Moon and the details of working in that environment, and become a cohesive group able to trust each other and work together closely.</p>
+    <p>All residents spend their days mostly in First Hab, running experiments and analyses in labs, building and testing prototypes in workshops, planning missions and the future of the colonies, or operating machinery doing mining, construction, fabrication, or farming. Sometimes they work in the greenhouse or go on sorties. Sometimes they do broadcasts for the people back on Earth.</p>
     <p>The First Rounders arrive over the course of a year in 10 separate groups of 20</p>
   </details>
   <details>
