--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -1,6 +1,7 @@
 <div class="columnSet">
 <article class="spanAll" id="residenceProgramChart">
-  <h2>The Residence Program - Structure and rules of the 7 rounds</h2>
+  <details>
+  <summary><h2>The Residence Program - Structure and rules of the 7 rounds</h2></summary>
   <p> Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
   <table>
   <tr>
@@ -74,10 +75,11 @@
  <div>
 Price for a residential spot when the Moon opens to the public:<h6> $250,000</h6>. Population when the opening occurs: <h6>25,600 souls</h6>. Total revenue from the Residence Program: <h6>$220 billion US</h6> Though the duration of the program could be drawn out by difficult techical hurdles, since energetic investment is being assumed, we shall estimate the whole thing is completed in <h6>30 years</h6>.
 </div>
+</details>
  </article>
 </div>
 <div class="columnSet">
   <div class="spanAll">
-    <h2>Phase 3 - duration 10 years. Residence Program Rounds 2 and 3</h2>
+    <h2>Phase 3 - duration 10 years. Residence Program Rounds 2, 3, and 4</h2>
   </div>
 </div>
