--- a/_includes/timeline/ph2-summary.html
+++ b/_includes/timeline/ph2-summary.html
@@ -1,6 +1,7 @@
 <div class="columnSet">
 <div class="spanAll">
-  <p>By the end of this phase:</p>
+  <details>
+  <summary>Status by the end of this phase:</summary>
   <ul>
     <li>There are 250 people living on the Moon - 200 First Rounders and 50 ISA staff.</li>
     <li>By mass, they get about two-thirds of their food from the Greenhouse and the Long Hab gardens.</li>
@@ -13,5 +14,6 @@
     <li>Most of those launches had an upper stage that was refueled with fuel from the Moon, and returned to Earth for reuse.</li>
     <li>Scaleable manufacturing processes, using purely materials acquired on the Moon or from asteroids, have been developed for the following goods: steel, topsoil, Zylon, a range of silicone polymers, transparent glass, structural glass composites, high explosives, sapphire, quartz, and pure metals including iron, aluminum, silicon, magnesium, titanium, calcium, and manganese </li>
   </ul>
+</details>
 </div>
 </div>
