--- a/_includes/timeline/ph1-summary.html
+++ b/_includes/timeline/ph1-summary.html
@@ -8,7 +8,7 @@
   <li> First Hab is a permanent structure that houses 40 crew from the ISA nations. That crew is composed of married couples on extended missions of at least 5 years.</li>
   <li> The ice mines are producing 20 kilotons of water per year. This water supplies all the fuel for the LNCs, the Pod Ships, and the EESS. It has been used to augment the shielding of Crossroads Station and First Hab, and to supply a large fuel depot at the EESS.</li>
   <li> There were about 200 to 250 launches from Earth lifting a total of 6 kilotons of payload to accomplish all this - an average of 13 to 17 launches per year.</li>
-  <li> The ISA nations have withdrawn from the Outer Space Treaty and signed a new Space Treaty governing their actions in space. That treaty evolved from the agreements they set up to cover the EESS and their joint lunar ventures, including the amendments that were enacted over the course of this phase.</li>
+  <li> The ISA nations have withdrawn from the Outer Space Treaty and signed a new Space Settlement Treaty (SST) governing their actions in space. That treaty evolved from the agreements they set up to cover the EESS and their joint lunar ventures, including the amendments that were enacted over the course of this phase.</li>
   </ul>
 </details>
   <div class="tooltip_templates">
