ph3 complete, start ph4
Former-commit-id: 4635cfea926ca0c3407965adf1e0e834a6f91cf9

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,11 +11,11 @@
 					</li>
 					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
 						<ul>
-							<li><a href="timeline.html#shipsRobotsISA" title="The ships for high-volume cargo, the first skyhook, the robots for large-scale construction by tele-operation, and the International Space Agency.">Ships, Robots, ISA</a></li>
-							<li><a href="timeline.html#skyhookHabsRP" title="2 more skyhooks, Fetcher and Hopper ships, Long Hab, Greenhouse,  the Residence Program">Skyhook, Habs, RP</a></li>
+							<li><a href="timeline.html#ph1-ships" title="The ships for high-volume cargo, the first skyhook, remote operations by robot, First Hab at the pole, water mining, and the International Space Agency.">Ships, Skyhook, ISA</a></li>
+							<li><a href="timeline.html#skyhookHabsRP" title="2 more skyhooks, Fetcher and Hopper ships, Long Hab, Greenhouse,  the Residence Program">Habs, Industry, RP</a></li>
 							<li><a href="timeline.html#residenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
-							<li><a href="timeline.html#LalandeCol" title="Expansion to Lalande, Gagarin Shipyard, Lunar life">250 Astronauts</a></li>
-							<li><a href="timeline.html#3baseRP2-4" title="Gagarin Station shipyard and manufacturing, construction of Cernan's Promise infrastructure, and 3200 people begin to be a society.">3 Bases 3200 People</a></li>
+							<li><a href="timeline.html#ph3" title="High-functioning robots and AI, allowing big interplanetary missions, fast expansion to Lalande, Lunar society fleshes out">Interplanetary, AI, Culture</a></li>
+							<li><a href="timeline.html#ph4" title="">The City, the Planets, Power</a></li>
 							<li><a href="timeline.html#RPround5" title="Lunar skyhook system complete, coil gun use, LEO skyhook underway, Cernan's Promise becomes a town full of homes, farms, factories, community spaces, bustle, and life. ">Exponential Growth</a></li>
 							<li><a href="timeline.html#RProunds6-7" title="LEO skyhook transforms access to space, Lalande City is built by autonomous robots and a few human directors, The Residence Program completes, there is a currency, a justice system, a constitution, and they start having kids.">Explosive Growth</a></li>
 							<li><a href="timeline.html#spaceBoom" title="The capacity to transport people or cargo around cis-lunar space, and to build almost anything with robots that require only minimal direction, has grown so much that almost any project ever proposed is now possible. Activity in space just goes BOOM.">BOOM!</a></li>
