--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -1,9 +1,9 @@
-<div class="columnSet">
+<div class="columnSet" id="ph1-ships">
   <div class="spanAll">
     <h2>Phase 1 - duration 15 years</h2>
   </div>
 </div>
-<div class="columnSet" id="shipsRobotsISA">
+<div class="columnSet">
   <article class="column" id="FirstTransportShips">
   <details>
     <summary><h5 style="display: inline">Construction of the Earth Equatorial Space Station</h5></summary>
