--- a/_includes/timeline/ph2-skyhooks.html
+++ b/_includes/timeline/ph2-skyhooks.html
@@ -1,4 +1,4 @@
-<div class="columnSet" id="skyhookHabsRP">
+<div class="columnSet">
  <article class="column" id="MoreSkyhooks">
   <details>
      <summary><h5>Gagarin <a href="machines2.html#TetherTransport">Skyhook</a> and Anchor Station</h5></summary>
