--- a/_includes/timeline/ph1-summary.html
+++ b/_includes/timeline/ph1-summary.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="skyhookHabsRP">
 <div class="spanAll">
   <h2>Phase 2 - duration 10 years. Residence Program Round 1.</h2>
 </div>
