--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -78,7 +78,7 @@ Price for a residential spot when the Moon opens to the public:<h6> $250,000</h6
 </details>
  </article>
 </div>
-<div class="columnSet">
+<div class="columnSet" id="ph3">
   <div class="spanAll">
     <h2>Phase 3 - duration 10 years. Residence Program Rounds 2, 3, and 4</h2>
   </div>
