ph4 transport work
Former-commit-id: 9c81b23704213c5fac6e7049421ecd6768be6e77

--- a/_includes/timeline/ph4-dev.html
+++ b/_includes/timeline/ph4-dev.html
@@ -11,6 +11,7 @@
     </details>
     <details>
       <summary><h5>Anshar Station</h5></summary>
+      Much of it arrives as rubble - fragile rubble pile asteroids were intentionally allowed to disintegrate during transport so they could be formed into a desirable shape for the station.
     </details>
     <details>
       <summary><h5>Cylinders</h5></summary>
