--- a/_includes/timeline/ph2-skyhooks.html
+++ b/_includes/timeline/ph2-skyhooks.html
@@ -54,6 +54,12 @@
     <p>The amount of fuel the EESS can now supply allows it to host a space tug. The tug hauls satellites meant for other orbits from the station to where they are going. Then the tug returns and refuels for more work. It can haul 2 tons to GEO.</p>
     <p>A small fleet of debris cleaners is also set up. They have VASIMR drives so they can do more before needing refueling and last a long time. They continue to hunt down the large pieces of debris and set them up for deorbit. They attach large balloons to the debris and inflate them before moving on. The balloons vastly increase the atmospheric drag on the debris, which causes them to slow and thus sink. Sometimes they move them into a lower orbit first, where there is more drag to do the job.</p>
   </details>
+  <details>
+    <summary>Draining the Inner Van Allen Belt and Changing Station Inclination</summary>
+    <p>The EESS orbits directly above the equator in order to avoid the <a href="https://en.wikipedia.org/wiki/South_Atlantic_Anomaly">South Atlantic Anomaly</a>. To make the station easier to launch to, and a better platform for Earth observation, it is decided to incline its orbit to 30&deg;. In order to prevent radiation from the Anomaly then greatly increasing the radiation dose on the EESS, a decision is taken. Drain the belt.</p>
+    <p>This was initially proposed by Russian physicist <a href="https://en.wikipedia.org/wiki/Valentin_Danilov">Valentin Danilov</a>. The concept was further developed by Robert Hoyt and Robert Forward into the <a href="http://www.tethers.com/HiVOLT.html">HiVOLT system</a>. It uses a set of conductive tethers anchored to satellites orbiting in the belt, to bend the trajectories of charged particles such that they escape it and leave. Their analysis showed an initial system of 5 satellites with tethers 100 km long would reduce the ionizing particles in the belt to less than 1% of the current flux within two months. A system like this is deployed, and further similar tethers added. In two years the belt becomes almost indistinguishable from surrounding space. </p>
+    <p>By the end of this phase a similar system is deployed for the outer belt as well. As it is much larger and more diffuse, the effect is not as dramatic. Still, over a few years the outer belt's particle flux drops by about a factor of 20.</p>
+  </details>
 </details>
 
 
