--- a/sass/_tables.sass
+++ b/sass/_tables.sass
@@ -20,3 +20,8 @@ tr:nth-child(2n)
 
 tr:nth-child(odd)
   background: $innerBkgd
+
+.verticalText
+  transform: rotate(90deg)
+  transform-origin: left top 0
+  float: left
