--- a/_includes/machines/mining/Minerals.html
+++ b/_includes/machines/mining/Minerals.html
@@ -1,7 +1,7 @@
 	<section>
 		<div class="blackDiv">
 			<table>
-				<caption><h2>Chemical makeup of lunar regolith.</h2> 
+				<caption><h2>Chemical makeup of lunar regolith.</h2>
           HL = Highlands,
 					LTB = Low-Ti Basalt, HTB = High-Ti Basalt. <br>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources11.pdf"> R. D. Waldron's </a>chapter in <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/contents.php"> Resources of Near-Earth Space</a>
           <details>
@@ -219,13 +219,11 @@
 			</div>
 			<div class="tooltip_templates">
 			<p id="SiO2">
-			Silicon dioxide, or silica - glass is mostly this. Pure, as a glass it is fused quartz, a stong, non-reactive glass that transmits most wavelengths - including ultraviolet light (for a tan, or a sunburn). It can withstand very high temperatures. It has an extremely low coefficient of thermal expansion, meaning it doesn't shrink when it gets cold or expand when it gets hot. So, glazing made of it won't develop leaks around the edges. Tubes made of it can run through heat exchangers and radiators, without cracking. At pressure of 1 atmosphere, it softens at 1665&deg;C. In vacuum that temperature will be lower by several hundred K, but it would still be high enough to serve well in the applications mentioned. It can be drawn into fibers with high optical quality (fiberoptics). </p>
+			Silicon dioxide, or silica - glass is mostly this. Pure, as a glass it is fused quartz, a stong, non-reactive glass that transmits most wavelengths - including ultraviolet light (for a tan, or a sunburn). It can withstand very high temperatures. It has an extremely low coefficient of thermal expansion, meaning it shrinks and expands only a tiny amount when temperatures fall and rise. So, seals around the edges of glazing made of it only need to fill small gaps and aren't stretched much when it's cold. Tubes made of it can run through heat exchangers and radiators, without cracking. At pressure of 1 atmosphere, it softens at 1665&deg;C. It can be drawn into fibers with high optical quality (fiberoptics). </p>
 			</div>
 			<div class="tooltip_templates">
 			<p id="Al2O3">
-			Aluminum oxide, or alumina - in crystalline form, it is sapphire. It
-			is very hard, and like silica very clear, transmitting light from
-			150 t0 5500 nm.
+			Aluminum oxide, or alumina - in crystalline form, it is sapphire. It is very hard, and like silica very clear, transmitting light from 150 t0 5500 nm. In its amorphous form, it is a hard, white material with good compressive strength that can be used as a refractory material up to temperatures of 1700&deg;C.
 			</p>
 			</div>
 
